--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "aws-amplify-react-native": "^5.0.5",
     "expo": "~43.0.0",
     "expo-av": "~10.1.3",
+    "expo-cli": "^4.13.0",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.1",
-    "react-native": "0.66.3",
+    "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1"
